--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "mkdocs-material",
-  "version": "9.7.0",
+  "name": "mkdocs-materialx",
+  "version": "10.0.2",
   "description": "Documentation that simply works",
   "keywords": [
     "mkdocs",
     "documentation",
     "theme"
   ],
-  "homepage": "https://squidfunk.github.io/mkdocs-material/",
+  "homepage": "https://jaywhj.github.io/mkdocs-material/",
   "bugs": {
-    "url": "https://github.com/squidfunk/mkdocs-material/issues",
-    "email": "martin.donath@squidfunk.com"
+    "url": "https://github.com/jaywhj/mkdocs-material/issues",
+    "email": "aaronwqt@gmail.com"
   },
   "license": "MIT",
   "private": true,
   "author": {
-    "name": "Martin Donath",
-    "email": "martin.donath@squidfunk.com"
+    "name": "Aaron Wang",
+    "email": "aaronwqt@gmail.com"
   },
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/squidfunk/mkdocs-material.git"
+    "url": "https://github.com/jaywhj/mkdocs-material"
   },
   "scripts": {
     "build": "rimraf material && ts-node -T tools/build --optimize",
