--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ requires = [
 build-backend = "hatchling.build"
 
 [project]
-name = "mkdocs-material"
+name = "mkdocs-materialx"
 dynamic = [
   "version",
   "dependencies",
@@ -74,21 +74,21 @@ Changelog = "https://squidfunk.github.io/mkdocs-material/changelog/"
 Issues = "https://github.com/squidfunk/mkdocs-material/issues"
 
 [project.entry-points."mkdocs.plugins"]
-"material/blog" = "material.plugins.blog.plugin:BlogPlugin"
-"material/group" = "material.plugins.group.plugin:GroupPlugin"
-"material/info" = "material.plugins.info.plugin:InfoPlugin"
-"material/meta" = "material.plugins.meta.plugin:MetaPlugin"
-"material/offline" = "material.plugins.offline.plugin:OfflinePlugin"
-"material/optimize" = "material.plugins.optimize.plugin:OptimizePlugin"
-"material/privacy" = "material.plugins.privacy.plugin:PrivacyPlugin"
-"material/projects" = "material.plugins.projects.plugin:ProjectsPlugin"
-"material/search" = "material.plugins.search.plugin:SearchPlugin"
-"material/social" = "material.plugins.social.plugin:SocialPlugin"
-"material/tags" = "material.plugins.tags.plugin:TagsPlugin"
-"material/typeset" = "material.plugins.typeset.plugin:TypesetPlugin"
+"materialx/blog" = "material.plugins.blog.plugin:BlogPlugin"
+"materialx/group" = "material.plugins.group.plugin:GroupPlugin"
+"materialx/info" = "material.plugins.info.plugin:InfoPlugin"
+"materialx/meta" = "material.plugins.meta.plugin:MetaPlugin"
+"materialx/offline" = "material.plugins.offline.plugin:OfflinePlugin"
+"materialx/optimize" = "material.plugins.optimize.plugin:OptimizePlugin"
+"materialx/privacy" = "material.plugins.privacy.plugin:PrivacyPlugin"
+"materialx/projects" = "material.plugins.projects.plugin:ProjectsPlugin"
+"materialx/search" = "material.plugins.search.plugin:SearchPlugin"
+"materialx/social" = "material.plugins.social.plugin:SocialPlugin"
+"materialx/tags" = "material.plugins.tags.plugin:TagsPlugin"
+"materialx/typeset" = "material.plugins.typeset.plugin:TypesetPlugin"
 
 [project.entry-points."mkdocs.themes"]
-material = "material.templates"
+materialx = "material.templates"
 
 [tool.hatch.version]
 source = "nodejs"
