--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,7 @@ theme:
     - navigation.sections
     - navigation.tabs
     # - navigation.tabs.sticky
-    - navigation.top
+    # - navigation.top
     # - navigation.tracking
     - search.highlight
     - search.share
@@ -159,8 +159,8 @@ markdown_extensions:
   - pymdownx.magiclink:
       normalize_issue_symbols: true
       repo_url_shorthand: true
-      user: jaywhj
-      repo: mkdocs-materialx
+      user: squidfunk
+      repo: mkdocs-material
   - pymdownx.mark
   - pymdownx.smartsymbols
   - pymdownx.snippets:
