--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,14 +72,14 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      # primary: indigo
+      primary: blue
       accent: blue
       toggle:
         icon: material/weather-sunny
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      # primary: deep purple
+      primary: deep orange
       accent: deep orange
       toggle:
         icon: material/brightness-4
