update primary color

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,14 +73,14 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: blue
-      accent: blue
+      accent: light blue
       toggle:
         icon: material/weather-sunny
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: deep orange
-      accent: deep orange
+      primary: cyan
+      accent: cyan
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
